syntax = "proto3";

package filesystembackups;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/filesystem_backups/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteFilesystemBackupRequest {
    string FilesystemBackupId = 1;
}

message DeleteFilesystemBackupTaskState {}
